# animal-combat-grpc

./: .dockerignore  Cargo.toml  Dockerfile  build.rs  docker-compose.yml
.github/workflows/: github-actions.yaml  github-actions.yaml.yml
data/: animals.json  maps.json
migrations/: 20230219090351_create_player_table.up.sql  20230307131710_create_clan_table.down.sql  20230307131710_create_clan_table.up.sql  20230316170440_create_messages_table.down.sql  20230316170440_create_messages_table.up.sql  20230316171312_create_chat_room_table.down.sql  20230316171312_create_chat_room_table.up.sql  20230322145451_create_emotes_table.down.sql  20230322145451_create_emotes_table.up.sql
proto/: auth.proto  battle.proto  clans.proto  players.proto
src/: lib.rs  main.rs
src/services/: auth.rs  battle.rs  clans.rs  mod.rs  players.rs
tests/: test_auth.rs  test_clans.rs  test_migration.rs  test_players.rs
tests/common/: mod.rs
