[package]
name = "animal-combat-grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.4.1", features = ["std"] }
chrono = "0.4.23"
dotenvy = "0.15.6"
jsonwebtoken = "8.2.0"
prost = "0.11.6"
prost-types = "0.11.6"
rand_core = { version = "0.6.4", features = ["std"] }
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.8.3"
tower = "0.4.13"
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }

[build-dependencies]
tonic-build = "0.8.4"

[profile.release]
strip = true

[dev-dependencies]
futures = "0.3.26"
