[package]
name = "animal-combat-grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.4.1", features = ["std"] }
chrono = "0.4.23"
dotenvy = "0.15.6"
futures = "0.3.27"
http = "0.2.9"
jsonwebtoken = "8.2.0"
prost = "0.11.6"
prost-types = "0.11.6"
rand_core = { version = "0.6.4", features = ["std"] }
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
sqlx = { version = "0.6.2", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "chrono",
] }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1.12"
tonic = "0.8.3"
tonic-health = "0.8.0"
tonic-web = "0.5.0"
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["cors", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }

[build-dependencies]
tonic-build = "0.8.4"

[profile.release]
strip = true
